@@ -1,3 +1,7 @@
+2007-08-16	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile: Account for -B architecture option.
+
 2007-07-18	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile: Eliminate unneeded temp.o
